Update badges in README.md

--- a/.gitattributes
+++ b/.gitattributes
@@ -10,3 +10,4 @@ docs            export-ignore
 *.json          export-ignore
 CHANGELOG.md    export-ignore
 CONTRIBUTING.md export-ignore
+README.md       export-ignore
