--- a/.gitattributes
+++ b/.gitattributes
@@ -5,9 +5,9 @@ resources/puml  export-ignore
 docs            export-ignore
 .gitattributes  export-ignore
 .gitignore      export-ignore
+.editorconfig   export-ignore
 *.xml           export-ignore
 *.dist          export-ignore
-*.json          export-ignore
 CHANGELOG.md    export-ignore
 CONTRIBUTING.md export-ignore
 README.md       export-ignore
