--- a/build.xml
+++ b/build.xml
@@ -1,182 +1,124 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-
+<?xml version="1.0" encoding="UTF-8"?>
 <project name="PlantUML" description="Provides PlantUML integration" default="help">
 
-    <runtarget target="init"/>
 
-    <!--TARGETS-->
-    <target name="init">
-        <resolvepath propertyName="dir.output" path="./resources/output/"/>
-        <resolvepath propertyName="dir.input" path="./resources/puml/"/>
-        <resolvepath propertyName="dir.tmp" path="./resources/tmp/"/>
-        <property name="file.version" value="./resources/readme/plantuml.version.txt"/>
-    </target>
+  <property name="dir.output" value="resources/output"/>
 
-    <target name="update"
-            depends="jar:update, test, jar:checksum, readme:update"
-            description="Update project with latest version of PlantUML"/>
 
-    <target name="readme:update"
-            description="Sets current PlantUML version in README.md"
-            depends="jar:version, jar:checksum">
-        <reflexive file="./README.md">
-            <filterchain>
-                <replaceregexp>
-                    <regexp pattern="&lt;!--version:start--&gt;.*&lt;!--version:end--&gt;"
-                            replace="&lt;!--version:start--&gt;${line.separator}${plantuml.version}${line.separator}&lt;!--version:end--&gt;"
-                            modifiers="Us"/>
-                    <regexp pattern="&lt;!--md5:start--&gt;.*&lt;!--md5:end--&gt;"
-                            replace="&lt;!--md5:start--&gt;${checksum.md5}&lt;!--md5:end--&gt;"
-                            modifiers="Us"/>
-                    <regexp pattern="&lt;!--sha1:start--&gt;.*&lt;!--sha1:end--&gt;"
-                            replace="&lt;!--sha1:start--&gt;${checksum.sha1}&lt;!--sha1:end--&gt;"
-                            modifiers="Us"/>
-                </replaceregexp>
-            </filterchain>
-        </reflexive>
-    </target>
+  <target name="update" depends="jar:update, readme:update"
+          description="Update project with latest version of PlantUML"/>
+  <target name="qa" depends="jar:test, executable:test" description="Runs all tests"/>
 
-    <target name="jar:update" description="Download latest version of PlantUML">
-        <filehash file="bin/plantuml.jar" propertyname="pre-update.sha1"/>
-        <delete file="bin/plantuml.jar"/>
-        <httpget dir="bin"
-                 url="https://sourceforge.net/projects/plantuml/files/latest/download?source=typ_redirect"
-                 followRedirects="true"
-                 filename="plantuml.jar"/>
-    </target>
 
-    <target name="jar:version" description="Retrieve current PlantUML version">
-        <exec executable="bin/plantuml" outputProperty="plantuml.output">
-            <arg value="-v"/>
-        </exec>
-        <propertyregex property="plantuml.version"
-                       pattern="\bPlantUML Version \d+\.\d+\.\d+\b"
-                       subject="${plantuml.output}"
-                       match="$0"
-                       defaultvalue="-"
-                       override="true"/>
-        <echo message="${plantuml.version}" file="${file.version}"/>
-        <notifysend title="Phing" msg="${plantuml.version}" icon="info"/>
-    </target>
+  <target name="readme:update" description="Sets current PlantUML version in README.md"
+          depends="jar:version, jar:checksum">
+    <reflexive file="./README.md">
+      <filterchain>
+        <replaceregexp>
+          <regexp pattern="&lt;!--version:start--&gt;.*&lt;!--version:end--&gt;"
+                  replace="&lt;!--version:start--&gt;${line.separator}${version.long}${line.separator}&lt;!--version:end--&gt;"
+                  modifiers="Us"/>
+          <regexp pattern="&lt;!--md5:start--&gt;.*&lt;!--md5:end--&gt;"
+                  replace="&lt;!--md5:start--&gt;${checksum.md5}&lt;!--md5:end--&gt;" modifiers="Us"/>
+          <regexp pattern="&lt;!--sha1:start--&gt;.*&lt;!--sha1:end--&gt;"
+                  replace="&lt;!--sha1:start--&gt;${checksum.sha1}&lt;!--sha1:end--&gt;" modifiers="Us"/>
+        </replaceregexp>
+      </filterchain>
+    </reflexive>
+  </target>
 
-    <target name="test" depends="jar:test, executable:test" description="Runs all tests"/>
+  <target name="jar:update" description="Download latest version of PlantUML">
+    <delete file="bin/plantuml.jar"/>
+    <httpget url="https://sourceforge.net/projects/plantuml/files/latest/download?source=typ_redirect"
+             dir="bin" filename="plantuml.jar" followRedirects="true"/>
+  </target>
 
-    <target name="jar:test" description="Check the correct functioning of plantuml.jar">
-        <phingcall target="test:clean"/>
-        <phingcall target="jar:run"/>
-        <phingcall target="test:validate"/>
-    </target>
+  <target name="jar:version" description="Retrieve current PlantUML version">
+    <exec executable="bin/plantuml" outputProperty="plantuml.output">
+      <arg value="-v"/>
+    </exec>
+    <propertyregex property="version.long" pattern="\bPlantUML Version (\d+\.\d+\.\d+)\b"
+                   subject="${plantuml.output}" match="$0" defaultvalue="-" override="true"/>
+    <propertyregex property="version.short" pattern="\bPlantUML Version (\d+\.\d+\.\d+)\b"
+                   subject="${plantuml.output}" match="$1" defaultvalue="-" override="true"/>
+    <echo message="v${version.short}"/>
+    <echo message="v${version.short}" file="resources/version.txt"/>
+  </target>
 
-    <target name="executable:test" description="Check the correct functioning of plantuml executable">
-        <phingcall target="test:clean"/>
-        <phingcall target="executable:run"/>
-        <phingcall target="test:validate"/>
-    </target>
+  <target name="jar:test" description="Check the correct functioning of plantuml.jar">
+    <phingcall target="test:clean"/>
+    <phingcall target="jar:run"/>
+    <phingcall target="test:validate"/>
+  </target>
 
-    <target name="jar:run" description="Generates .png files with plantuml.jar">
-        <mkdir dir="${dir.output}"/>
-        <exec executable="java" passthru="true" checkreturn="true">
-            <arg value="-jar"/>
-            <arg value="bin/plantuml.jar"/>
-            <arg value="-verbose"/>
-            <arg value="-o"/>
-            <arg value="${dir.output}"/>
-            <arg value="${dir.input}/*.puml"/>
-        </exec>
-    </target>
+  <target name="executable:test" description="Check the correct functioning of plantuml executable">
+    <phingcall target="test:clean"/>
+    <phingcall target="executable:run"/>
+    <phingcall target="test:validate"/>
+  </target>
 
-    <target name="executable:run" description="Generates .png files with plantuml executable">
-        <mkdir dir="${dir.output}"/>
-        <exec executable="bin/plantuml" passthru="true" checkreturn="true">
-            <arg value="-verbose"/>
-            <arg value="-o"/>
-            <arg value="${dir.output}"/>
-            <arg value="${dir.input}/*.puml"/>
-        </exec>
-    </target>
+  <target name="jar:run" description="Generates .png files with plantuml.jar">
+    <mkdir dir="${dir.output}"/>
+    <exec executable="java" passthru="true" checkreturn="true">
+      <arg value="-jar"/>
+      <arg value="bin/plantuml.jar"/>
+      <arg value="-verbose"/>
+      <arg value="-o"/>
+      <arg value="${dir.output}"/>
+      <arg value="resources/puml/*.puml"/>
+    </exec>
+  </target>
 
-    <target name="test:clean" description="Deletes output dir">
-        <delete dir="${dir.output}" verbose="true"/>
-    </target>
+  <target name="executable:run" description="Generates .png files with plantuml executable">
+    <mkdir dir="${dir.output}"/>
+    <exec executable="bin/plantuml" passthru="true" checkreturn="true">
+      <arg value="-verbose"/>
+      <arg value="-o"/>
+      <arg value="${dir.output}"/>
+      <arg value="resources/puml/*.puml"/>
+    </exec>
+  </target>
 
-    <target name="test:validate" description="Verifies the existence of .png files">
-        <foreach target="test:file-check" param="filename" absparam="filename.absolute">
-            <filelist dir="${dir.output}"
-                      files="colors.png, colors-azure.png, sequence-diagram.png, testdot.png, version.png"/>
-        </foreach>
-    </target>
+  <target name="test:clean" description="Deletes output dir">
+    <delete dir="${dir.output}" verbose="true"/>
+  </target>
 
-    <target name="test:file-check" hidden="true">
-        <if>
-            <available file="${filename.absolute}"/>
-            <then>
-                <echo message="OK: ${filename.absolute}"/>
-            </then>
-            <else>
-                <fail message="NOT FOUND: ${filename.absolute}"/>
-            </else>
-        </if>
-    </target>
+  <target name="test:validate" description="Verifies the existence of .png files">
+    <foreach target="test:file-check" param="filename" absparam="filename.absolute">
+      <filelist dir="${dir.output}"
+                files="colors.png, colors-azure.png, sequence-diagram.png, testdot.png, version.png"/>
+    </foreach>
+  </target>
 
-    <target name="diagnostics">
-        <diagnostics/>
-    </target>
+  <target name="test:file-check" hidden="true">
+    <if>
+      <available file="${filename.absolute}"/>
+      <then>
+        <echo message="OK: ${filename.absolute}"/>
+      </then>
+      <else>
+        <fail message="NOT FOUND: ${filename.absolute}"/>
+      </else>
+    </if>
+  </target>
 
-    <target name="jar:checksum" description="Generate checksums for plantuml.jar">
-        <mkdir dir="resources/readme/"/>
-        <!--md5-->
-        <filehash file="bin/plantuml.jar" propertyname="checksum.md5" algorithm="md5"/>
-        <echo message="${checksum.md5}" file="resources/readme/plantuml.jar.md5"/>
-        <echo message="${checksum.md5}"/>
-        <!--sha1-->
-        <filehash file="bin/plantuml.jar" propertyname="checksum.sha1" algorithm="sha1"/>
-        <echo message="${checksum.sha1}" file="resources/readme/plantuml.jar.sha1"/>
-        <echo message="${checksum.sha1}"/>
-    </target>
+  <target name="jar:checksum" description="Generate checksums for plantuml.jar">
+    <!--md5-->
+    <filehash file="bin/plantuml.jar" propertyname="checksum.md5" algorithm="md5"/>
+    <echo message="${checksum.md5}"/>
+    <!--sha1-->
+    <filehash file="bin/plantuml.jar" propertyname="checksum.sha1" algorithm="sha1"/>
+    <echo message="${checksum.sha1}"/>
+  </target>
 
-    <target name="jar:next-version" description="Retrieves version number for next release">
-        <gitdescribe repository="resources/auto-update" outputProperty="describe.output"/>
-        <php expression="trim(trim('${describe.output}', 'v'));" returnProperty="describe.output"/>
-        <delete file="build.version"/>
-        <version startingVersion="${describe.output}" releasetype="Minor" property="build.version"/>
-    </target>
+  <target name="help">
+    <uptodate property="uptodate.visualizer" srcfile="build.xml" targetfile="docs/build.png"/>
+    <runtarget target="visualizer"/>
+    <open path="docs/build.png"/>
+  </target>
 
-    <target name="git:tags-listing" description="List all git tags">
-        <!--https://stackoverflow.com/a/34239190/4345061-->
-        <exec executable="git" passthru="true">
-            <arg value="log"/>
-            <arg line="--graph --all --decorate --oneline --simplify-by-decoration"/>
-        </exec>
-    </target>
+  <target name="visualizer" unless="uptodate.visualizer" description="Create buildfile map">
+    <visualizer destination="docs/build.png" footer="https://github.com/jawira/plantuml"/>
+  </target>
 
-    <target name="phing:visualize" description="Update build.png">
-        <visualizer format="png" destination="docs"/>
-    </target>
-
-    <target name="changelog:links" description="Update links in composer.json">
-        <composer command="require">
-            <arg value="symplify/changelog-linker"/>
-        </composer>
-        <exec executable="vendor/bin/changelog-linker">
-            <arg value="link"/>
-        </exec>
-        <composer command="remove">
-            <arg value="symplify/changelog-linker"/>
-        </composer>
-    </target>
-
-    <target name="help">
-        <uptodate property="visualizer.uptodate" srcfile="build.xml" targetfile="docs/build.png"/>
-        <if>
-            <not>
-                <isset property="visualizer.uptodate"/>
-            </not>
-            <then>
-                <visualizer destination="docs/build.png"/>
-            </then>
-        </if>
-        <exec executable="xdg-open" spawn="true">
-            <arg file="docs/build.png"/>
-        </exec>
-    </target>
 </project>
